// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StraightTile renders with default values 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      transform=""
    >
      <path
        d="M -45,0 H 45 V 110 H -45 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M -45,0 H -40 V 27.5 H -45 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -45,27.5 H -40 V 55 H -45 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M -45,55 H -40 V 82.5 H -45 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -45,82.5 H -40 V 110 H -45 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 40,0 H 45 V 27.5 H 40 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 40,27.5 H 45 V 55 H 40 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 40,55 H 45 V 82.5 H 40 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 40,82.5 H 45 V 110 H 40 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile renders with the given parameters for a tile oriented to the left with an angle of 0˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(180 100 205)"
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile renders with the given parameters for a tile oriented to the left with an angle of 45˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(45 100 150)rotate(180 100 205)"
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 0.5 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform=""
    >
      <path
        d="M 55,150 H 145 V 205 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform=""
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 2 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform=""
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 3 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform=""
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 4 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform=""
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile renders with the given parameters for a tile oriented to the right with an angle of 45˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(45 100 150)"
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile updates when the parameter direction is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(180 100 205)"
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile updates when the parameter ratio is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform=""
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile updates when the parameter rotation is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(45 100 150)"
    >
      <path
        d="M 55,150 H 145 V 260 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,150 H 60 V 177.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,177.5 H 60 V 205 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,205 H 60 V 232.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,232.5 H 60 V 260 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,150 H 145 V 177.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,177.5 H 145 V 205 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,205 H 145 V 232.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,232.5 H 145 V 260 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile updates when the parameter x is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform=""
    >
      <path
        d="M -5,150 H 85 V 260 H -5 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M -5,150 H 0 V 177.5 H -5 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -5,177.5 H 0 V 205 H -5 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M -5,205 H 0 V 232.5 H -5 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -5,232.5 H 0 V 260 H -5 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 80,150 H 85 V 177.5 H 80 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 80,177.5 H 85 V 205 H 80 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 80,205 H 85 V 232.5 H 80 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 80,232.5 H 85 V 260 H 80 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`StraightTile updates when the parameter y is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform=""
    >
      <path
        d="M 55,40 H 145 V 150 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,40 H 60 V 67.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,67.5 H 60 V 95 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,95 H 60 V 122.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,122.5 H 60 V 150 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,40 H 145 V 67.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,67.5 H 145 V 95 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,95 H 145 V 122.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,122.5 H 145 V 150 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
  </div>
</body>
`;
